Test/dafny0/EqualityTypesModuleExports.dfy.expect
EqualityTypesModuleExports.dfy(13,8): Error: set argument type must support equality (got Klm) (perhaps try declaring type parameter 'Klm' on line 11 as 'Klm(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(13,23): Error: set argument type must support equality (got Klm) (perhaps try declaring type parameter 'Klm' on line 11 as 'Klm(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(32,15): Error: type parameter (X) passed to function Fib must support equality (got Y) (perhaps try declaring type parameter 'Y' on line 26 as 'Y(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(32,23): Error: set argument type must support equality (got Y) (perhaps try declaring type parameter 'Y' on line 26 as 'Y(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(34,13): Error: set argument type must support equality (got GG) (perhaps try declaring type parameter 'GG' on line 21 as 'GG(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(84,7): Error: type 'Syn4' declared as supporting equality, but the RHS type ((real,A)) does not
EqualityTypesModuleExports.dfy(92,7): Error: type 'Subset4' declared as supporting equality, but the RHS type ((A,int)) does not
EqualityTypesModuleExports.dfy(50,8): Error: type parameter (X) passed to type Dt0 must support equality (got M) (perhaps try declaring type parameter 'M' on line 48 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(51,8): Error: type parameter (Y) passed to type Dt1 must support equality (got M) (perhaps try declaring type parameter 'M' on line 48 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(52,8): Error: type parameter (Z) passed to type Dt2 must support equality (got M) (perhaps try declaring type parameter 'M' on line 48 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(65,8): Error: type parameter 0 (X) passed to type Co0 must support equality (got M) (perhaps try declaring type parameter 'M' on line 63 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(66,8): Error: type parameter 0 (Y) passed to type Co1 must support equality (got M) (perhaps try declaring type parameter 'M' on line 63 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(67,8): Error: type parameter 0 (Z) passed to type Co2 must support equality (got M) (perhaps try declaring type parameter 'M' on line 63 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(99,8): Error: type parameter 0 (B) passed to type Opaque2 must support equality (got M) (perhaps try declaring type parameter 'M' on line 94 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(105,8): Error: type parameter 1 (C) passed to type O'Pake2 must support equality (got M) (perhaps try declaring type parameter 'M' on line 94 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(110,8): Error: type parameter (A) passed to type Syn2 must support equality (got M) (perhaps try declaring type parameter 'M' on line 94 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(115,8): Error: type parameter (A) passed to type Syn5 must support equality (got M) (perhaps try declaring type parameter 'M' on line 94 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(117,8): Error: type parameter 0 (C) passed to type Syn6 must support equality (got M) (perhaps try declaring type parameter 'M' on line 94 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(121,8): Error: type parameter (A) passed to type Subset1 must support equality (got M) (perhaps try declaring type parameter 'M' on line 94 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(123,8): Error: type parameter (A) passed to type Subset2 must support equality (got M) (perhaps try declaring type parameter 'M' on line 94 as 'M(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(133,8): Error: type parameter (A) passed to type Syn5 must support equality (got ListWithALittlExtra<int>)
EqualityTypesModuleExports.dfy(134,8): Error: type parameter (A) passed to type Syn5 must support equality (got Co2<int, int>)
EqualityTypesModuleExports.dfy(135,8): Error: type parameter (A) passed to type Syn5 must support equality (got Opaque0) (perhaps try declaring type parameter 'Opaque0' on line 73 as 'Opaque0(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypesModuleExports.dfy(139,8): Error: type parameter (A) passed to type Syn5 must support equality (got Syn1<int -> int>)
24 resolution/type errors detected in EqualityTypesModuleExports.dfy
